# playgrad

./: .gitignore  .mcp.json  AGENTS.md  INTERNALS.md  LICENSE  README.md  pyproject.toml
examples/cifar10/: main.py  resnet.py  train.py
lib/: data.py  resnet.py  train.py
playgrad/: __init__.py  schedule.py  session.py  watch.py
playgrad/ui/: __init__.py  app.py  graph.py  render.py
scripts/: train_cifar10.py
tests/: test_resnet.py
tests/examples/cifar10/: test_resnet.py
tests/playgrad/: test_schedule.py  test_session.py  test_watch.py
tests/playgrad/ui/: test_app.py  test_graph.py  test_render.py
