[project]
name = "playgrad"
version = "0.1.0"
description = "Visualization library for deep learning experiments."
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "torchvision>=0.27.0",
    "ty>=0.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["playgrad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
